ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postiz
spec:
  rules:
    - host: postiz.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postiz
                port:
                  number: 80
